fixed navbar going off screen on profile

--- a/app/css/nav.css
+++ b/app/css/nav.css
@@ -26,7 +26,7 @@ ul.navBar {
 ul.navBarPP {
     list-style-type: none;
     background-color: #95ccfc;
-    margin-top:-3.84%;
+    margin-top:-2%; 
 	font-family: sans-serif;
 	text-align:center;
 	font-size:125%;
